# DiabetesHealthIndicators

./: .gitignore  LICENSE  README.md  config.json  eda.ipynb  pyproject.toml
.datasets/: datasets.json  download_datasets.py  dwn_datasets.py
.models/rf_scratch/: rf_scratch_cv_statistics.json  rf_scratch_metrics.json
.models/rf_sklearn/: rf_sklearn_cv_statistics.json  rf_sklearn_metrics.json
.models/svr_scratch/: svr_scratch_cv_statistics.json  svr_scratch_metrics.json
.models/svr_sklearn/: svr_sklearn_cv_statistics.json  svr_sklearn_metrics.json
dhi/: const.py  constants.py  decorators.py  utils.py
dhi/data/: constants.py  factory.py  utils.py
dhi/data/loader/: _base.py  dhi_loader.py
dhi/data/preprocessing/: _base.py  dhi_preprocessor.py
dhi/data/preprocessor/: _base.py  const.py  dhi_preprocessor.py
dhi/data/visualization/: exploratory_plots.py  visualizer.py
dhi/data/visualizer/: visualizer.py
dhi/ml/: model_wrapper.py  scorer.py
dhi/ml/svr/: svr.py
dhi/models/eval/: metrics.py  scorer.py
dhi/models/experiments/: explainer.py  runner.py
dhi/models/inspection/: shap_explainer.py
dhi/models/random_forest/: __init__.py
dhi/models/random_forest/forest/: forest.py
dhi/models/random_forest/sampling/: bagging.py
dhi/models/random_forest/tree/: impurity.py  node.py  tree.py  tree_graph.py
dhi/models/selection/: cross_validation.py  grid_search.py
dhi/models/svr/: __init__.py  svr.py
dhi/statistics/: __init__.py  component_reduction.py  const.py  feature_selection.py  metrics.py
docs/: README.md  svr_task_def.md
docs/report/: Documentation.tex  biblio.bib  style.sty  task_def.tex
docs/svr_diabetes_risk/: references.bib
notebooks/: experiments.ipynb  exploratory_data_analysis.ipynb  rf_classification_experiments.ipynb  svr_regression_experiments.ipynb
(+13 files in other folders)
