[project]
name = "ml-diabetes"
version = "0.1.0"
description = "ML project on predicting Diabetes risk based on health indicators."
authors = [
    {name = "ALEXANDRU PROFIR (culbec)",email = "profir.alexx@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
